// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`V4 Requestor Sticky create, discard, try to update the discarded item: Create 1`] = `
{
  "body": {
    "@odata.context": "../$metadata#Root()/$entity",
    "@odata.metadataEtag": "W/"a20-O5lCLLWGDNbr2oZok3e/UzVbxgg"",
    "ID": 0,
    "__transient": true,
    "data": "",
  },
  "headers": ObjectContaining {
    "sap-contextid": Any<String>,
  },
  "status": 200,
}
`;

exports[`V4 Requestor Sticky create, discard, try to update the discarded item: Discard 1`] = `
{
  "body": "",
  "headers": ObjectNotContaining {
    "sap-contextid": Any<String>,
  },
  "status": 204,
}
`;

exports[`V4 Requestor Sticky create, discard, try to update the discarded item: Update discarded item 1`] = `
{
  "body": "Not found",
  "headers": ObjectNotContaining {
    "sap-contextid": Any<String>,
  },
  "status": 404,
}
`;

exports[`V4 Requestor can create data through a call 1`] = `
{
  "@odata.context": "../$metadata#RootElement/$entity",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 555,
  "IsActiveEntity": false,
  "Prop1": "",
  "Prop2": "",
  "Sibling_ID": 0,
  "isBoundAction1Hidden": false,
  "isBoundAction2Hidden": false,
  "isBoundAction3Hidden": false,
}
`;

exports[`V4 Requestor can create data through a call 2`] = `
{
  "@odata.context": "../$metadata#RootElement/$entity",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 666,
  "IsActiveEntity": false,
  "Prop1": "",
  "Prop2": "",
  "Sibling_ID": 0,
  "isBoundAction1Hidden": false,
  "isBoundAction2Hidden": false,
  "isBoundAction3Hidden": false,
}
`;

exports[`V4 Requestor can fail to create data through a call 1`] = `"Unknown Entity SetIDONTEXIST"`;

exports[`V4 Requestor can get the annotation file 1`] = `
"<edmx:Edmx xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx" Version="4.0">
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml">
        <edmx:Include Namespace="com.sap.vocabularies.Common.v1" Alias="Common"/>
    </edmx:Reference>
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml">
        <edmx:Include Namespace="com.sap.vocabularies.UI.v1" Alias="UI"/>
    </edmx:Reference>
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Communication.xml">
        <edmx:Include Namespace="com.sap.vocabularies.Communication.v1" Alias="Communication"/>
    </edmx:Reference>
    <edmx:Reference Uri="/TripPinRESTierService/$metadata">
        <edmx:Include Namespace="Trippin"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns="http://docs.oasis-open.org/odata/ns/edm" Namespace="local">

        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`V4 Requestor can get the metadata 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<edmx:Edmx Version="4.0" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml">
    <edmx:Include Alias="Common" Namespace="com.sap.vocabularies.Common.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml">
    <edmx:Include Alias="Core" Namespace="Org.OData.Core.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml">
    <edmx:Include Alias="UI" Namespace="com.sap.vocabularies.UI.v1"/>
  </edmx:Reference>
  <edmx:DataServices>
    <Schema Namespace="sap.fe.core.ActionVisibility" xmlns="http://docs.oasis-open.org/odata/ns/edm">
      <EntityContainer Name="EntityContainer">
        <EntitySet Name="RootElement" EntityType="sap.fe.core.ActionVisibility.RootElement">
          <NavigationPropertyBinding Path="Sibling" Target="RootElement"/>
          <NavigationPropertyBinding Path="_Elements" Target="SubElement"/>
          <NavigationPropertyBinding Path="SiblingEntity" Target="RootElement"/>
        </EntitySet>
        <EntitySet Name="SubElement" EntityType="sap.fe.core.ActionVisibility.SubElement">
          <NavigationPropertyBinding Path="owner" Target="RootElement"/>
          <NavigationPropertyBinding Path="Sibling" Target="SubElement"/>
          <NavigationPropertyBinding Path="SiblingEntity" Target="SubElement"/>
        </EntitySet>
      </EntityContainer>
      <EntityType Name="RootElement">
        <Key>
          <PropertyRef Name="ID"/>
          <PropertyRef Name="IsActiveEntity"/>
        </Key>
        <Property Name="ID" Type="Edm.Int32" Nullable="false"/>
        <Property Name="Prop1" Type="Edm.String"/>
        <Property Name="Prop2" Type="Edm.String"/>
        <Property Name="isBoundAction1Hidden" Type="Edm.Boolean"/>
        <Property Name="isBoundAction2Hidden" Type="Edm.Boolean"/>
        <Property Name="isBoundAction3Hidden" Type="Edm.Boolean"/>
        <Property Name="Sibling_ID" Type="Edm.Int32"/>
        <NavigationProperty Name="Sibling" Type="sap.fe.core.ActionVisibility.RootElement">
          <ReferentialConstraint Property="Sibling_ID" ReferencedProperty="ID"/>
        </NavigationProperty>
        <NavigationProperty Name="_Elements" Type="Collection(sap.fe.core.ActionVisibility.SubElement)" Partner="owner">
          <OnDelete Action="Cascade"/>
        </NavigationProperty>
        <Property Name="IsActiveEntity" Type="Edm.Boolean" Nullable="false" DefaultValue="true"/>
        <Property Name="HasActiveEntity" Type="Edm.Boolean" Nullable="false" DefaultValue="false"/>
        <Property Name="HasDraftEntity" Type="Edm.Boolean" Nullable="false" DefaultValue="false"/>
        <NavigationProperty Name="DraftAdministrativeData" Type="sap.fe.core.ActionVisibility.DraftAdministrativeData" ContainsTarget="true"/>
        <NavigationProperty Name="SiblingEntity" Type="sap.fe.core.ActionVisibility.RootElement"/>
      </EntityType>
      <EntityType Name="SubElement">
        <Key>
          <PropertyRef Name="ID"/>
          <PropertyRef Name="IsActiveEntity"/>
        </Key>
        <Property Name="ID" Type="Edm.Int32" Nullable="false"/>
        <Property Name="SubProp1" Type="Edm.String"/>
        <Property Name="SubProp2" Type="Edm.String"/>
        <Property Name="isBoundAction3Hidden" Type="Edm.Boolean"/>
        <Property Name="isBoundAction4Hidden" Type="Edm.Boolean"/>
        <Property Name="owner_ID" Type="Edm.Int32"/>
        <NavigationProperty Name="owner" Type="sap.fe.core.ActionVisibility.RootElement" Partner="_Elements">
          <ReferentialConstraint Property="owner_ID" ReferencedProperty="ID"/>
        </NavigationProperty>
        <Property Name="sibling_ID" Type="Edm.Int32"/>
        <NavigationProperty Name="Sibling" Type="sap.fe.core.ActionVisibility.SubElement">
          <ReferentialConstraint Property="sibling_ID" ReferencedProperty="ID"/>
        </NavigationProperty>
        <Property Name="IsActiveEntity" Type="Edm.Boolean" Nullable="false" DefaultValue="true"/>
        <Property Name="HasActiveEntity" Type="Edm.Boolean" Nullable="false" DefaultValue="false"/>
        <Property Name="HasDraftEntity" Type="Edm.Boolean" Nullable="false" DefaultValue="false"/>
        <NavigationProperty Name="DraftAdministrativeData" Type="sap.fe.core.ActionVisibility.DraftAdministrativeData" ContainsTarget="true"/>
        <NavigationProperty Name="SiblingEntity" Type="sap.fe.core.ActionVisibility.SubElement"/>
      </EntityType>
      <EntityType Name="DraftAdministrativeData">
        <Key>
          <PropertyRef Name="DraftUUID"/>
        </Key>
        <Property Name="DraftUUID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="CreationDateTime" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="CreatedByUser" Type="Edm.String" MaxLength="256"/>
        <Property Name="DraftIsCreatedByMe" Type="Edm.Boolean"/>
        <Property Name="LastChangeDateTime" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="LastChangedByUser" Type="Edm.String" MaxLength="256"/>
        <Property Name="InProcessByUser" Type="Edm.String" MaxLength="256"/>
        <Property Name="DraftIsProcessedByMe" Type="Edm.Boolean"/>
      </EntityType>
      <Action Name="boundAction1" IsBound="true" EntitySetPath="self">
        <Parameter Name="self" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Action Name="boundAction2" IsBound="true" EntitySetPath="in">
        <Parameter Name="in" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Action Name="boundAction3" IsBound="true" EntitySetPath="self">
        <Parameter Name="self" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Action Name="boundActionReturnsVoid" IsBound="true">
        <Parameter Name="in" Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Function Name="baseFunction" IsBound="true" IsComposable="false">
        <Parameter Name="self" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <Parameter Name="data" Type="Edm.String"/>
        <ReturnType Type="Edm.String"/>
      </Function>
      <Action Name="draftPrepare" IsBound="true" EntitySetPath="in">
        <Parameter Name="in" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <Parameter Name="SideEffectsQualifier" Type="Edm.String"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Action Name="draftPrepare" IsBound="true" EntitySetPath="in">
        <Parameter Name="in" Type="sap.fe.core.ActionVisibility.SubElement"/>
        <Parameter Name="SideEffectsQualifier" Type="Edm.String"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.SubElement"/>
      </Action>
      <Action Name="draftActivate" IsBound="true" EntitySetPath="in">
        <Parameter Name="in" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Action Name="draftEdit" IsBound="true" EntitySetPath="in">
        <Parameter Name="in" Type="sap.fe.core.ActionVisibility.RootElement"/>
        <Parameter Name="PreserveChanges" Type="Edm.Boolean"/>
        <ReturnType Type="sap.fe.core.ActionVisibility.RootElement"/>
      </Action>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement">
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="ID"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="Prop1"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 1"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction1"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction2"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction2Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Menu Action 1"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.menuAction1"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Menu Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.menuAction2"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 3"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction3"/>
              <Annotation Term="UI.Hidden" Path="_Elements/isBoundAction3Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 1 Inline"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction1"/>
              <PropertyValue Property="Inline" Bool="true"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="Sibling/isBoundAction1Hidden"/>
              <PropertyValue Property="Label" String="Sibling isBoundAction2 Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction2"/>
              <PropertyValue Property="Inline" Bool="true"/>
              <Annotation Term="UI.Hidden" Path="Sibling/isBoundAction2Hidden"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Root Element"/>
            <PropertyValue Property="TypeNamePlural" String="Root Elements"/>
            <PropertyValue Property="Title">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="Prop1"/>
              </Record>
            </PropertyValue>
            <PropertyValue Property="Description">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="Prop2"/>
              </Record>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.CollectionFacet">
              <PropertyValue Property="Facets">
                <Collection>
                  <Record Type="UI.ReferenceFacet">
                    <PropertyValue Property="Label" String="Identification"/>
                    <PropertyValue Property="Target" AnnotationPath="@UI.Identification"/>
                  </Record>
                  <Record Type="UI.CollectionFacet">
                    <PropertyValue Property="ID" String="GeneralInformation"/>
                    <PropertyValue Property="Label" String="General Information"/>
                    <PropertyValue Property="Facets">
                      <Collection>
                        <Record Type="UI.ReferenceFacet">
                          <PropertyValue Property="Label" String="General Information"/>
                          <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#GeneralInformation"/>
                        </Record>
                      </Collection>
                    </PropertyValue>
                  </Record>
                  <Record Type="UI.ReferenceFacet">
                    <PropertyValue Property="ID" String="SubElements"/>
                    <PropertyValue Property="Label" String="Sub Elements"/>
                    <PropertyValue Property="Target" AnnotationPath="_Elements/@UI.LineItem"/>
                  </Record>
                </Collection>
              </PropertyValue>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 1"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction1"/>
              <PropertyValue Property="Determining" Bool="true"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction2"/>
              <PropertyValue Property="Determining" Bool="true"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction2Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Header Action 1"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundHeaderAction1"/>
              <PropertyValue Property="Determining" Bool="false"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Header Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundHeaderAction2"/>
              <PropertyValue Property="Determining" Bool="false"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction2Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="isBoundAction2Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="isBoundAction3Hidden"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="GeneralInformation">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Label" String="General Information"/>
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="ID"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="Prop1"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="Prop2"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.EntityContainer/RootElement">
        <Annotation Term="Common.DraftRoot">
          <Record Type="Common.DraftRootType">
            <PropertyValue Property="ActivationAction" String="sap.fe.core.ActionVisibility.draftActivate"/>
            <PropertyValue Property="EditAction" String="sap.fe.core.ActionVisibility.draftEdit"/>
            <PropertyValue Property="PreparationAction" String="sap.fe.core.ActionVisibility.draftPrepare"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/ID">
        <Annotation Term="Core.Computed" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/Prop1">
        <Annotation Term="Common.Label" String="First Prop"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/Prop2">
        <Annotation Term="Common.Label" String="Second Propyour "/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/isBoundAction1Hidden">
        <Annotation Term="Common.Label" String="Bound Action 1 Hidden"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/isBoundAction2Hidden">
        <Annotation Term="Common.Label" String="Bound Action 2 Hidden"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/isBoundAction3Hidden">
        <Annotation Term="Common.Label" String="Bound Action 3 Hidden"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/IsActiveEntity">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/HasActiveEntity">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/HasDraftEntity">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.RootElement/DraftAdministrativeData">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement">
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="SubProp1"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="owner/isBoundAction1Hidden"/>
              <PropertyValue Property="Label" String="Owner -> boundAction1 Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 1"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction1"/>
              <Annotation Term="UI.Hidden" Path="owner/isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Menu Action 1"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.menuAction1"/>
              <Annotation Term="UI.Hidden" Path="owner/isBoundAction1Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="owner/Sibling/isBoundAction2Hidden"/>
              <PropertyValue Property="Label" String="Owner -> Sibling boundAction2 Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction2"/>
              <Annotation Term="UI.Hidden" Path="owner/Sibling/isBoundAction2Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Menu Action 2"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.menuAction2"/>
              <Annotation Term="UI.Hidden" Path="owner/Sibling/isBoundAction2Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="isBoundAction3Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 3 Inline"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction3"/>
              <PropertyValue Property="Inline" Bool="true"/>
              <Annotation Term="UI.Hidden" Path="isBoundAction3Hidden"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="Sibling/isBoundAction4Hidden"/>
              <PropertyValue Property="Label" String="Sibling boundAction4 Hidden"/>
            </Record>
            <Record Type="UI.DataFieldForAction">
              <PropertyValue Property="Label" String="Bound Action 4"/>
              <PropertyValue Property="Action" String="sap.fe.core.ActionVisibility.boundAction4"/>
              <PropertyValue Property="Inline" Bool="true"/>
              <Annotation Term="UI.Hidden" Path="Sibling/isBoundAction4Hidden"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.EntityContainer/SubElement">
        <Annotation Term="Common.DraftNode">
          <Record Type="Common.DraftNodeType">
            <PropertyValue Property="PreparationAction" String="sap.fe.core.ActionVisibility.draftPrepare"/>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/ID">
        <Annotation Term="Core.Computed" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/isBoundAction3Hidden">
        <Annotation Term="Common.Label" String="Bound Action 3 Hidden"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/isBoundAction4Hidden">
        <Annotation Term="Common.Label" String="Bound Action 4 Hidden"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/IsActiveEntity">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/HasActiveEntity">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/HasDraftEntity">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.SubElement/DraftAdministrativeData">
        <Annotation Term="UI.Hidden" Bool="true"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData">
        <Annotation Term="Common.Label" String="{i18n>Draft_DraftAdministrativeData}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/DraftUUID">
        <Annotation Term="UI.Hidden" Bool="true"/>
        <Annotation Term="Common.Label" String="{i18n>Draft_DraftUUID}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/CreationDateTime">
        <Annotation Term="Common.Label" String="{i18n>Draft_CreationDateTime}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/CreatedByUser">
        <Annotation Term="Common.Label" String="{i18n>Draft_CreatedByUser}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/DraftIsCreatedByMe">
        <Annotation Term="UI.Hidden" Bool="true"/>
        <Annotation Term="Common.Label" String="{i18n>Draft_DraftIsCreatedByMe}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/LastChangeDateTime">
        <Annotation Term="Common.Label" String="{i18n>Draft_LastChangeDateTime}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/LastChangedByUser">
        <Annotation Term="Common.Label" String="{i18n>Draft_LastChangedByUser}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/InProcessByUser">
        <Annotation Term="Common.Label" String="{i18n>Draft_InProcessByUser}"/>
      </Annotations>
      <Annotations Target="sap.fe.core.ActionVisibility.DraftAdministrativeData/DraftIsProcessedByMe">
        <Annotation Term="UI.Hidden" Bool="true"/>
        <Annotation Term="Common.Label" String="{i18n>Draft_DraftIsProcessedByMe}"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`V4 Requestor can get the other annotation file 1`] = `
"<edmx:Edmx xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx" Version="4.0">
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml">
        <edmx:Include Namespace="com.sap.vocabularies.Common.v1" Alias="Common"/>
    </edmx:Reference>
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml">
        <edmx:Include Namespace="com.sap.vocabularies.UI.v1" Alias="UI"/>
    </edmx:Reference>
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Communication.xml">
        <edmx:Include Namespace="com.sap.vocabularies.Communication.v1" Alias="Communication"/>
    </edmx:Reference>
    <edmx:Reference Uri="/TripPinRESTierService/$metadata">
        <edmx:Include Namespace="Trippin"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns="http://docs.oasis-open.org/odata/ns/edm" Namespace="local">

        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`V4 Requestor can get the other annotation file with a more complex regexp 1`] = `
"<edmx:Edmx xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx" Version="4.0">
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml">
        <edmx:Include Namespace="com.sap.vocabularies.Common.v1" Alias="Common"/>
    </edmx:Reference>
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml">
        <edmx:Include Namespace="com.sap.vocabularies.UI.v1" Alias="UI"/>
    </edmx:Reference>
    <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Communication.xml">
        <edmx:Include Namespace="com.sap.vocabularies.Communication.v1" Alias="Communication"/>
    </edmx:Reference>
    <edmx:Reference Uri="/TripPinRESTierService/$metadata">
        <edmx:Include Namespace="Trippin"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns="http://docs.oasis-open.org/odata/ns/edm" Namespace="local">

        </Schema>
    </edmx:DataServices>
</edmx:Edmx>
"
`;

exports[`V4 Requestor can get the root 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
        <app:service xml:lang="en" xml:base="/sap/fe/core/mock/action/"
            xmlns:app="http://www.w3.org/2007/app"
            xmlns:atom="http://www.w3.org/2005/Atom"
            xmlns:m="http://schemas.microsoft.com/ado/2007/08/dataservices/metadata"
            xmlns:sap="http://www.sap.com/Protocols/SAPData">
            <app:workspace>
            </app:workspace>
            <atom:link rel="self" href="/sap/fe/core/mock/action/"/>
            <atom:link rel="latest-version" href="/sap/fe/core/mock/action/"/>
        </app:service>"
`;

exports[`V4 Requestor can get the serviceCatalog 1`] = `"{"d":{"results":[{"ID":"action"},{"ID":"debug"},{"ID":"sticky"}]}}"`;

exports[`V4 Requestor can get the serviceCatalog 2`] = `"{"d":{"results":[{"TechnicalName":"action","Version":2},{"TechnicalName":"debug","Version":2},{"TechnicalName":"sticky","Version":2}]}}"`;

exports[`V4 Requestor can reload the data 1`] = `
{
  "message": "Reload success",
}
`;

exports[`V4 Requestor can update data through a call 1`] = `
{
  "@odata.context": "../$metadata#RootElement/$entity",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 556,
  "IsActiveEntity": false,
  "Prop1": "",
  "Prop2": "",
  "Sibling_ID": 0,
  "isBoundAction1Hidden": false,
  "isBoundAction2Hidden": false,
  "isBoundAction3Hidden": false,
}
`;

exports[`V4 Requestor can update data through a call 2`] = `
{
  "@odata.context": "$metadata#RootElement(ID=556)",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 556,
  "IsActiveEntity": false,
  "Prop1": "MyNewProp1",
  "Prop2": "",
  "Sibling_ID": 0,
  "isBoundAction1Hidden": false,
  "isBoundAction2Hidden": false,
  "isBoundAction3Hidden": false,
}
`;

exports[`V4 Requestor can update data through a call 3`] = `
{
  "@odata.context": "$metadata#RootElement(ID=556)/Prop1",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 556,
  "IsActiveEntity": false,
  "Prop1": "Lali-ho",
  "Prop2": "",
  "Sibling_ID": 0,
  "isBoundAction1Hidden": false,
  "isBoundAction2Hidden": false,
  "isBoundAction3Hidden": false,
}
`;

exports[`V4 Requestor get one data 1`] = `
{
  "@odata.context": "$metadata#RootElement(ID=2)",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 2,
  "IsActiveEntity": true,
  "Prop1": "First Prop for Obj2",
  "Prop2": "Second Prop for Obj3",
  "Sibling_ID": 1,
  "isBoundAction1Hidden": true,
  "isBoundAction2Hidden": true,
  "isBoundAction3Hidden": false,
}
`;

exports[`V4 Requestor get one data 2`] = `""`;

exports[`V4 Requestor get one data 3`] = `
{
  "@odata.context": "$metadata#RootElement(ID=2)",
  "@odata.metadataEtag": "W/"606c-jGYf/2yxvlcG7Z+VRm6krl+f58U"",
  "HasActiveEntity": false,
  "HasDraftEntity": false,
  "ID": 2,
  "IsActiveEntity": true,
  "Prop1": "King of Tenant 003",
  "Prop2": "Second Prop for Obj3",
  "Sibling_ID": 1,
  "isBoundAction1Hidden": true,
  "isBoundAction2Hidden": true,
  "isBoundAction3Hidden": false,
}
`;
